--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"firebase": "^10.4.0",
+		"firebase-admin": "^11.11.0",
 		"next": "latest",
 		"pusher": "^5.1.3",
 		"pusher-js": "^8.3.0",
