--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"pusher": "^5.1.3",
 		"pusher-js": "^8.3.0",
 		"react": "latest",
-		"react-dom": "latest"
+		"react-dom": "latest",
+		"react-qr-code": "^2.0.12"
 	},
 	"devDependencies": {
 		"autoprefixer": "latest",
